# db_studio

./: .gitignore  AGENT_AUTOPAIR_PROTOCOL.md  AGENT_TUNNEL_PROTOCOL.md  DEPLOY.md  docker-compose.yml  scratch_users.html
.github/: dependabot.yml
.github/workflows/: build-agent.yml  v2-build.yml
admin-frontend/: Dockerfile  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
admin-frontend/src/: App.tsx  main.tsx  styles.css
admin-frontend/src/components/: Shell.tsx
admin-frontend/src/lib/: api.ts
admin-frontend/src/pages/: Abuse.tsx  Analytics.tsx  Announcements.tsx  Audit.tsx  Billing.tsx  Dashboard.tsx  EmailTemplates.tsx  Feedback.tsx  Flags.tsx  Invites.tsx  Login.tsx  Operators.tsx  Retention.tsx  UserDetail.tsx  Users.tsx  Workspaces.tsx
agent/: README.md  agent.manifest  build-mac.sh  build.ps1  build.sh  go.mod  go.sum  main.go  resource_windows_amd64.syso  versioninfo.json
agent/internal/config/: config.go
agent/internal/pair/: pair.go
agent/internal/singleton/: singleton_other.go  singleton_windows.go
agent/internal/tray/: icons_other.go  icons_windows.go  tray.go
agent/internal/tunnel/: client.go
agent/internal/ui/: icon.go  ui.go  ui_other.go
agent/tools/genicon/: main.go
backend/: .dockerignore  .swcrc  Caddyfile.example  Dockerfile  Dockerfile.agent  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  prisma.config.ts  tsconfig.json
backend/docs/: CLIENT_HELD_KEYS.md  SECRETS.md  SECURITY.md
backend/prisma/: schema.prisma  seed.ts
backend/prisma/enums/: audit-action.prisma  density.prisma  dialect.prisma  incident-status.prisma  payment-attempt-status.prisma  plan-tier.prisma  review-status.prisma  role.prisma  scheduled-run-status.prisma  theme.prisma  user-approval-status.prisma  webhook-event.prisma
backend/prisma/models/: abuse-event.prisma  agent.prisma  ai-chat.prisma  announcement.prisma  api-key.prisma  audit-log.prisma  billing-adjustment.prisma  billing.prisma  column-mask.prisma  comment.prisma  connection-invite.prisma  (+34 more)
backend/scripts/: create-operator.ts  re-encrypt-to-kms.ts
backend/src/: agent-main.ts  app.module.ts  main.ts
cli/: README.md  package.json  tsconfig.json
cli/src/: index.ts
frontend/: .dockerignore  Dockerfile  docker-compose.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: sitemap.xml
frontend/src/: App.js  App.tsx  main.js  main.tsx
frontend/src-tauri/: Cargo.toml  README.md
terraform-provider/: README.md  go.mod  main.go
v2/: .gitignore  README.md  docker-compose.yml
v2/backend/: .env.example  Cargo.toml  Dockerfile
v2/backend/src/: crypto.rs  main.rs
v2/deploy/: nginx-v2.conf
v2/frontend/: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
(+581 files in other folders)
