[package]
name = "queryschema-v2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "queryschema-v2"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
# Runtime query API only (no `query!` macro) so this compiles without a live DB.
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "json",
  "chrono",
] }
serde = { version = "1", features = ["derive"] }
# preserve_order keeps JSON object key order = the SQL column order from to_jsonb.
serde_json = { version = "1", features = ["preserve_order"] }
jsonwebtoken = "9"
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
# Lighter release build so the RAM-tight prod box (or a `-j1` build) survives.
opt-level = 2
lto = false
codegen-units = 16
